--- a/Elotz UI/package.json
+++ b/Elotz UI/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.0",
-    "@material-ui/lab": "^4.0.0",
+    "@material-ui/lab": "^4.0.0-alpha.43",
     "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
